--- a/package.json
+++ b/package.json
@@ -21,12 +21,19 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angularfire2": "5.0.0-rc.5-next",
+    "c3": "^0.4.21",
     "core-js": "^2.4.1",
+    "d3": "^4.13.0",
+    "firebase": "^4.11.0",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^4.7.2",
+    "ngx-bootstrap": "^2.0.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0",
+    "@angular/cli": "^1.6.0",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
